RESOLVED FIXED42350
clipPath is missing cycle detection
https://bugs.webkit.org/show_bug.cgi?id=42350
Summary clipPath is missing cycle detection
Nikolas Zimmermann
Reported 2010-07-15 02:50:05 PDT
clipPath is missing cycle detection, leading to recursion crashes
Attachments
Patch (25.45 KB, patch)
2010-07-15 02:54 PDT, Nikolas Zimmermann
krit: review+
Nikolas Zimmermann
Comment 1 2010-07-15 02:54:57 PDT
Dirk Schulze
Comment 2 2010-07-15 03:10:29 PDT
Comment on attachment 61628 [details] Patch r=me
Nikolas Zimmermann
Comment 3 2010-07-15 07:51:59 PDT
Landed in r63420.
Note You need to log in before you can comment on or make changes to this bug.