2010-07-15  Nikolas Zimmermann  <nzimmermann@rim.com>

Reviewed by Dirk Schulze.

        clipPath is missing cycle detection
        https://bugs.webkit.org/show_bug.cgi?id=42350

        Detect cyclic clipper resources, and ignore them on rendering. Early exit in applyResource just like the pattern/mask resources do.

        * rendering/RenderSVGResourceClipper.cpp:
        (WebCore::RenderSVGResourceClipper::applyResource):
        (WebCore::RenderSVGResourceClipper::hitTestClipContent):
        (WebCore::RenderSVGResourceClipper::childElementReferencesResource):
        * rendering/RenderSVGResourceClipper.h:

2010-07-15  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Dirk Schulze.

        clipPath is missing cycle detection
        https://bugs.webkit.org/show_bug.cgi?id=42350

        Change clipPath behaviour: clipPath children that reference the clipPath they define, are not ignored.
        Updated tests accordingly. Raised SVG WG question, as the handling is inconsistent between Opera/FF & WebKit.

        * platform/mac/svg/clip-path/clip-path-recursive-call-by-child-expected.txt:
        * platform/mac/svg/custom/recursive-clippath-expected.checksum:
        * platform/mac/svg/custom/recursive-clippath-expected.png:
        * platform/mac/svg/custom/recursive-clippath-expected.txt:
        * svg/clip-path/clip-path-recursive-call-by-child.svg:
        * svg/custom/recursive-clippath.svg:


Canonical link: https://commits.webkit.org/54268@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63420 268f45cc-cd09-0410-ab3c-d52691b4dbfc